--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,4 +38,4 @@ jobs:
           publish_branch: gh-pages
           force_orphan: true
           commit_message: "Deploy to GitHub Pages"
-          keep_files: true
+          keep_files: false
