--- a/package.json
+++ b/package.json
@@ -32,5 +32,5 @@
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   },
-  "homepage": "https://ieee-kjsit.github.io/algoforge.main.site"
+  "homepage": "https://algoforge.tech"
 }
